# par-term-emu-core-rust

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT-REMEDIATION.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TESTING_PLAN.md  TEST_COVERAGE_SUMMARY.md  audit.md  build.rs  handoff.md  package-lock.json  pyproject.toml  streaming.md  test_flags.py  test_resize_client.py  test_streaming_client.py  test_utf8_streaming.py  todos.md
.claude/commands/: cut-release.md  finish-agent-work.md  finish-issue.md  finish-work.md
.github/workflows/: ci.yml  deployment.yml  publish-crates.yml  publish-testpypi.yml  release.yml
derive/: Cargo.toml
derive/src/: lib.rs
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  ARCHITECTURE.md  BUILDING.md  CONFIG_REFERENCE.md  CROSS_PLATFORM.md  FFI_GUIDE.md  FONTS.md  GRAPHICS_TESTING.md  INSTANT_REPLAY.md  MACROS.md  MATURIN_BEST_PRACTICES.md  OBSERVERS.md  REGIONAL_FLAG_LIMITATION.md  RUST_USAGE.md  SECURITY.md  STREAMING.md  TESTING_KITTY_ANIMATIONS.md  VT_FEATURE_PARITY.md  VT_SEQUENCES.md  VT_TECHNICAL_REFERENCE.md  graphics_plan.md
docs/plans/: 2026-02-13-command-output-capture-design.md  2026-02-13-command-output-capture.md  2026-02-13-semantic-buffer-zoning-design.md  2026-02-13-semantic-buffer-zoning.md  2026-02-14-contextual-awareness-api-design.md  2026-02-14-contextual-awareness-api.md  2026-02-14-file-transfer-design.md  2026-02-14-file-transfer.md  2026-02-14-instant-replay-design.md  2026-02-14-instant-replay.md  2026-02-14-semantic-snapshot-api-design.md  2026-02-14-semantic-snapshot-api.md  2026-02-14-terminal-observer-api-design.md  2026-02-14-terminal-observer-api.md
docs/research/: OSC-9-4-PROGRESS-BAR-IMPLEMENTATION.md
examples/: README.md  bce_scroll_test.py  char_test.py  demo.yaml  gradient_test.py  rich_mimic_test.py  screenshot_demo.py  scroll_timing_test.py  streaming_client.html  streaming_debug.py  streaming_demo.py
images/: snake.sixel  snake_tui.sixel
proto/: terminal.proto
python/par_term_emu_core_rust/: __init__.py  observers.py
scripts/: test_file_transmission.sh  test_graphics_step_by_step.sh  test_kitty_animation.py  test_resize_client.py  test_scroll_comprehensive.sh  test_simple_graphic.sh  test_streaming_client.py  test_utf8_streaming.py
shell_integration/: README.md  install.sh  par_term_emu_core_rust_shell_integration.bash  par_term_emu_core_rust_shell_integration.fish  par_term_emu_core_rust_shell_integration.zsh
src/: ansi_utils.rs  badge.rs  cell.rs  color_utils.rs  coprocess.rs  debug.rs  ffi.rs  grapheme.rs  grid.rs  html_export.rs  lib.rs  macros.rs  mouse.rs  observer.rs  pty_error.rs  pty_session.rs  shell_integration.rs  sixel.rs  text_utils.rs  tmux_control.rs  unicode_normalization_config.rs  zone.rs
src/graphics/: animation.rs  iterm.rs  kitty.rs  mod.rs  placeholder.rs  serialization.rs
src/grid/: edit.rs  erase.rs  export.rs  mod.rs  rect.rs  scroll.rs  tests.rs  zone.rs
src/python_bindings/: common.rs  conversions.rs  enums.rs  mod.rs  observer.rs  pty.rs  screenshot_config.rs  streaming.rs  terminal.rs  types.rs
src/python_bindings/terminal/: badge_api.rs  bookmark_api.rs  clipboard_api.rs  color_api.rs  file_transfer_api.rs  image_api.rs  metrics_api.rs  mod.rs  mouse_api.rs  multiplexing_api.rs  notification_api.rs  recording_api.rs  scrollback_api.rs  search_api.rs  selection_api.rs  shell_integration_api.rs  text_api.rs  trigger_api.rs
src/screenshot/: config.rs  error.rs  font_cache.rs  renderer.rs  shaper.rs
src/screenshot/formats/: svg.rs
src/streaming/: auth_hash.rs  broadcaster.rs  client.rs  error.rs  mod.rs  proto.rs  protocol.rs  server.rs  terminal.pb.rs
src/terminal/: action.rs  apc_filter.rs  clipboard.rs  colors.rs  compliance.rs  event.rs  file_transfer.rs  graphics.rs  image.rs  macros.rs  metrics.rs  mod.rs  multiplexing.rs  notification.rs  perform.rs  progress.rs  recording.rs  replay.rs  replay_snapshot.rs  screen.rs  search.rs  semantic_snapshot.rs  shell_integration.rs  snapshot.rs  snapshot_manager.rs  terminal_snapshot.rs  trigger.rs  write.rs
src/terminal/sequences/: csi.rs  dcs.rs  esc.rs  osc.rs
src/terminal/tests/: attributes.rs  basic.rs  bookmarks.rs  clipboard.rs  coverage_gaps.rs  cursor.rs  detection.rs  editing.rs  ffi_tests.rs  grid_integration_tests.rs  keyboard.rs  kitty_apc.rs  metrics.rs  mod.rs  modes.rs  observer_tests.rs  queries.rs  rectangles.rs  screen.rs  scrolling.rs  search.rs  shell_integration.rs  terminal_snapshot_tests.rs  (+4 more)
src/tests/: ffi_tests.rs  observer_tests.rs  terminal_snapshot_tests.rs  terminal_tests.rs
tests/: test_command_output.py  test_contextual_events.py  test_coprocess.rs  test_file_transfer.py  test_flag_emoji.rs  test_image_placement.py  test_image_serialization.py  test_integration.py  test_ioctl_size.py  test_macros.py  test_macros_extended.py  test_named_progress_bars.py  test_observer.py  test_pty.py  test_remote_host.py  test_screenshot.py  test_semantic_snapshot.py  test_sixel_raster_and_palette.py  test_skin_tone_modifiers.rs  test_streaming.py  test_streaming.rs  test_terminal.py  test_terminal_bindings.py  test_triggers.py  test_triggers.rs  test_unicode_normalization.py  test_user_vars.py  test_ws_smoke.rs  test_zones.py  test_zwj_sequences.rs
web-terminal-frontend/: .env.example  README.md  buf.gen.yaml  eslint.config.mjs  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web-terminal-frontend/app/: globals.css  layout.tsx  page.tsx
web-terminal-frontend/components/: OnscreenKeyboard.tsx  Terminal.tsx  TerminalDebug.tsx
web-terminal-frontend/lib/: protocol.ts
web-terminal-frontend/public/: theme.css
web-terminal-frontend/types/: terminal.ts
web_term/: 404.html  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
web_term/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
(+110 files in other folders)
