[package]
name = "par-term-emu-core-rust"
version = "0.9.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "par_term_emu_core_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.27.1"
vte = "0.15.0"
unicode-width = "0.2.2"
portable-pty = "0.9.0"
base64 = "0.22.1"
bitflags = "2.10.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Streaming server dependencies
tokio = { version = "1.35", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.23", optional = true }
axum = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }

# Screenshot support - using pure Rust swash for cross-platform compatibility
image = "0.25.9"
swash = "0.2.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[dev-dependencies]
pyo3 = { version = "0.27.1", features = ["auto-initialize"] }
proptest = "1.9.0"
tempfile = "3.13"

[features]
default = ["pyo3/extension-module"]
streaming = ["tokio", "tokio-tungstenite", "axum", "futures-util", "uuid"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
