[package]
name = "par-term-emu-core-rust"
version = "0.42.4"
edition = "2021"
rust-version = "1.88"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Comprehensive terminal emulator library in Rust with Python bindings - VT100/VT220/VT320/VT420/VT520 support, PTY, Sixel/iTerm2/Kitty graphics"
readme = "README.md"
license = "MIT"
repository = "https://github.com/paulrobello/par-term-emu-core-rust"
homepage = "https://github.com/paulrobello/par-term-emu-core-rust"
documentation = "https://github.com/paulrobello/par-term-emu-core-rust/blob/main/README.md"
keywords = ["terminal", "emulator", "vt100", "pty", "sixel"]
categories = ["command-line-utilities", "development-tools", "api-bindings"]
exclude = [
    "*.png",
    "*.jpg",
    "*.jpeg",
    "*.svg",
    "*.sixel",
    "*.html",
    "*.yaml",
    "images/",
    "examples/",
    "tests/",
    "web-terminal-frontend/",
    "terminfo/",
    "shell_integration/",
    ".github/",
    ".gitignore",
    "CLAUDE.md",
    "handoff.md",
    "streaming.md",
    "Makefile",
    "pyproject.toml",
    "python/",
    "scripts/",
]

[lib]
name = "par_term_emu_core_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "par-term-streamer"
path = "src/bin/streaming_server.rs"
required-features = ["streaming"]

[dependencies]
pyo3 = { version = "0.29", optional = true, features = ["multiple-pymethods"] }
vte = "0.15.0"
unicode-width = "0.2.2"
portable-pty = "0.9.0"
base64 = "0.22.1"
bitflags = "2.13.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
percent-encoding = "2.3.2"
url = "2.5.8"
uuid = { version = "1.23.2", features = ["v4", "serde"] }

# Streaming server dependencies
tokio = { version = "1.52.3", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
axum = { version = "0.8.9", features = ["ws"], optional = true }
tower-http = { version = "0.6.11", features = ["fs", "trace", "cors"], optional = true }
futures-util = { version = "0.3.32", optional = true }

# CLI dependencies (for streaming server binary)
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }
anyhow = { version = "1.0.102", optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true }

# HTTP client for downloading web frontend (using rustls for cross-compilation support)
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"], optional = true }

# Compression (used for Kitty graphics o=z zlib decompression + archive extraction)
flate2 = "1.1.9"

# Archive extraction
tar = { version = "0.4.46", optional = true }

# Protocol Buffers
prost = { version = "0.14.3", optional = true }

# TLS support
# (PEM parsing uses rustls-pki-types' PemObject trait via tokio_rustls::rustls::pki_types,
#  replacing the unmaintained rustls-pemfile crate — RUSTSEC-2025-0134.)
rustls = { version = "0.23.40", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"], optional = true }

# HTTP Basic Auth support (htpasswd-format verification via maintained crates;
# replaces the abandoned htpasswd-verify chain — RUSTSEC-2022-0011 / -0004 / -0071.)
bcrypt = { version = "0.19.1", optional = true }
md-5 = { version = "0.11.0", optional = true }
sha1 = { version = "0.11.0", optional = true }
headers = { version = "0.4.1", optional = true }

# System resource monitoring
sysinfo = { version = "0.39.3", optional = true }

# Screenshot support - using pure Rust swash for cross-platform compatibility
image = { version = "0.25.10", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp", "color_quant", "rayon"] }
# AVIF is intentionally excluded (SEC-007): enabling it pulls in `ravif` →
# `rav1e` → the unmaintained `paste` proc-macro (RUSTSEC-2024-0436). AVIF is
# never produced or consumed by this crate (screenshots are PNG/JPEG/BMP/SVG;
# inline graphics decode PNG/JPEG/GIF/etc.), so dropping it has no behavior
# impact while removing the unmaintained transitive dependency.
swash = "0.2.7"
parking_lot = "0.12.5"
subtle = "2.6.1"
zeroize = "1.8.2"

# Unicode text handling
unicode-segmentation = "1.13.3"
unicode-normalization = "0.1.25"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"
nix = { version = "0.31.3", features = ["process", "term", "signal"] }

# jemalloc for better server performance (5-15% throughput improvement)
# Only available on non-Windows platforms
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.7.0", optional = true }

[build-dependencies]
# Only needed for regenerating protobuf code (requires protoc installed)
prost-build = { version = "0.14.3", optional = true }

[dev-dependencies]
pyo3 = { version = "0.29", features = ["auto-initialize"] }
tokio = { version = "1.52.3", features = ["full", "test-util"] }
proptest = "1.11.0"
tempfile = "3.27"

[features]
default = ["python"]
python = ["pyo3", "pyo3/extension-module"]
streaming = ["tokio", "tokio-tungstenite", "axum", "tower-http", "futures-util", "clap", "anyhow", "tracing", "tracing-subscriber", "reqwest", "tar", "prost", "rustls", "tokio-rustls", "axum-server", "bcrypt", "md-5", "sha1", "headers", "sysinfo"]

# jemalloc for better server performance (5-15% throughput improvement)
# Automatically included with streaming on non-Windows platforms
jemalloc = ["tikv-jemallocator"]

# Regenerate protobuf code from proto/terminal.proto (requires protoc installed)
regenerate-proto = ["prost-build"]

# Convenience feature combinations
rust-only = []
full = ["python", "streaming"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
